--- a/new/content/pages/products/index.adoc
+++ b/new/content/pages/products/index.adoc
@@ -1,6 +1,6 @@
 :slug: products/
-:description: The purpose of this page is to present the products offered by Fluid Attacks, which focus on helping customers in the security testing process, aiming to improve their experience and allowing us to keep close contact with them. Our star products are Integrates and Asserts.
-:keywords: Fluid Attacks, Products, Ethical Hacking, Pentesting, Security, Information.
+:description: Fluid Attacks offers products focused on helping customers in the security testing process. Find here how Integrates, Drills, and Forces work.
+:keywords: Fluid Attacks, Security Testing, Integrates, Drills, Forces
 :template: products/products
 
 = Products
