--- a/content/pages/services/comparative/index.adoc
+++ b/content/pages/services/comparative/index.adoc
@@ -1,7 +1,7 @@
 :slug: services/comparative/
 :category: services
-:description: Our Ethical Hacking and Pentesting services seek to find and report all the present security vulnerabilities in your application. It is important to distinguish between the different services we offer in order to select the service that fits your needs.
-:keywords: Fluid Attacks, Ethical Hacking, Comparison, One-Shot Hacking, Continuous Hacking, Pentesting.
+:description: Know the differences between continuous hacking and one-shot hacking offered by Fluid Attacks.
+:keywords: Fluid Attacks, Ethical Hacking, Pentesting, Comparison, Company
 :usecasespage: yes
 :yes: image:../../images/icons/yes.png[yes]
 :no: image:../../images/icons/no.png[no]
