--- a/content/pages/services/continuous-hacking/index.adoc
+++ b/content/pages/services/continuous-hacking/index.adoc
@@ -1,7 +1,7 @@
 :slug: services/continuous-hacking/
 :category: services
-:description: In this page we describe our Continuous Hacking service, which aims to detect and report all the vulnerabilities in your application as soon as possible. Our participation in the development life cycle allow us to continuously detect security findings in a development environment.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security.
+:description: Our Continuous Hacking detects and reports all the vulnerabilities and security issues during the whole software development life cycle.
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Security, Software Development Life Cycle
 :template: salesforce
 
 = Continuous Hacking
