--- a/content/pages/services/faq/index.adoc
+++ b/content/pages/services/faq/index.adoc
@@ -1,7 +1,7 @@
 :slug: services/faq/
 :category: services
-:description: Our Continuous Hacking service aims to detect and report all the vulnerabilities in your application as soon as possible. In this page we present a recompilation of questions and answers that help understand the Continuous Hacking service and how it can benefit an organization.
-:keywords: Fluid Attacks, Services, Continuos Hacking, Ethical Hacking, FAQ, Questions.
+:description: Here we present a compilation of questions and answers to help our clients understand Fluid Attacks' services and how it can benefit your organization.
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, FAQ, Questions, Answers
 
 = Frequently asked questions
 
