--- a/content/pages/subscription/index.adoc
+++ b/content/pages/subscription/index.adoc
@@ -1,7 +1,7 @@
 :slug: subscription/
-:description: In this page you can subscribe to Fluid Attacks Blog, where you can find many interesting articles about information technology, hacking challenges writeups, recent trends in information security and other topics related to ethical hacking and vulnerabilities detection.
-:keywords: Fluid Attacks, Subscription, Information, News, Blog, Security.
+:description: Subscribe to our Blog and find articles about IT, hacking challenges, information security trends, and more ethical hacking and pentesting related topics.
+:keywords: Fluid Attacks, Subscription, Blog, Information, News, Security Information Trends, Ethical Hacking, Pentest
 :form: https://fluidattacks.com/forms/subscription
 :template: form
 
-= Subscribe to our blog!
+= Subscribe to Our Blog!
