--- a/new/content/pages/contact-us/index.adoc
+++ b/new/content/pages/contact-us/index.adoc
@@ -1,6 +1,6 @@
 :slug: contact-us/
-:description: In this page we present our contact information, where you can get further details about our products and services. Fluid Attacks is a company focused on information security, ethical hacking, penetration testing and vulnerabilities detection over applications.
-:keywords: Fluid Attacks, Contact, Information, Company, About us, Security.
+:description: Contact Fluid Attacks' team and solve now all the vulnerabilities in your company's software!
+:keywords: Fluid Attacks, Contact Us, Information, Company, About Us, Security, Experts
 :template: contact-us
 
 = Talk to our experts
