--- a/new/content/pages/products/integrates/index.adoc
+++ b/new/content/pages/products/integrates/index.adoc
@@ -1,6 +1,6 @@
 :slug: products/integrates/
-:description: Integrates is a system which provides all interested parties information and updates about the current state of the project, the number of security findings discovered and its criticality, occurrences, among other information in order to keep close contact with our customers.
-:keywords: Fluid Attacks, Products, Integrates, Ethical Hacking, Pentesting, Security.
+:description: Integrates is a platform that provides information such as security findings, criticality, occurrences, among other data to all project stakeholders.
+:keywords: Fluid Attacks, Products, Integrates, Stakeholders, Security, Red Team Platform
 :template: products/integrates
 
 = Integrates
